Adding more function

--- a/codefortheyoung/templates/codefortheyoung/base.html
+++ b/codefortheyoung/templates/codefortheyoung/base.html
@@ -42,10 +42,10 @@
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Menu</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="{% url 'giref:index' %}">Home</a></li>
-                  <li><a class="grey-text text-lighten-3" href="{% url 'giref:about-us' %}">About Us</a></li>
-                  <li><a class="grey-text text-lighten-3" href="{% url 'giref:contact-us' %}">Contact Us</a></li>
-                  <li><a class="grey-text text-lighten-3" href="{% url 'giref:join-us' %}">Join Us</a></li>
+                  <li><a class="grey-text text-lighten-3" href="{% url 'codefortheyoung:index' %}">Home</a></li>
+                  <!-- <li><a class="grey-text text-lighten-3" href="{% url 'giref:about-us' %}">About Us</a></li>
+                  <li><a class="grey-text text-lighten-3" href="{% url 'giref:contact-us' %}">Contact Us</a></li> -->
+                  <li><a class="grey-text text-lighten-3" href="{% url 'codefortheyoung:join-us' %}">Join Us</a></li>
                 </ul>
               </div>
             </div>
