--- a/giref/templates/giref/index.html
+++ b/giref/templates/giref/index.html
@@ -17,7 +17,7 @@
           </div>
         </div>
         <div class="parallax">
-          <img src='{% static "img/background_cty.jpg" %}' class="hoverable">
+          <img src='{{homepage_banner.image.url}}' class="hoverable">
         </div>
       </div>
 
@@ -111,7 +111,7 @@
         </div>
 
         <div  class="parallax">
-          <img src="{% static 'img/background.jpg' %}">    
+          <img src='{{homepage_joinus.image.url}}'>    
         </div>
       </div>
 
