--- a/codefortheyoung/templates/codefortheyoung/join_us.html
+++ b/codefortheyoung/templates/codefortheyoung/join_us.html
@@ -48,7 +48,7 @@
 
 			<div class="row">
 			<div class="input-field col s12">
-			<!-- <input placeholder="Placeholder" id="first_name" type="text" class="validate"> -->
+			
 			{{form.state}}
 			<label for="first_name">State</label>
 
@@ -56,8 +56,20 @@
 
 			</div>
 			
+			<div class="row">
+			<div class="input-field col s12">
+			{{form.phonenumber}}
+			<label for="first_name">Phone Number</label>
+
+			</div>
+
+			</div>
 			
-			<li><a class="waves-effect customize btn-large call-to-action" href="#">Join Us</a></
+			<!-- <a class="waves-effect customize btn-large call-to-action" href="#">Join Us</a> -->
+			<div class="row">
+				<button type="submit" class="waves-effect customize btn-large call-to-action">Submit</button>	
+			</div>
+			
 			</form>
 			</div>
         
