--- a/giref/templates/giref/about-us.html
+++ b/giref/templates/giref/about-us.html
@@ -8,7 +8,7 @@
 
 	<div class="parallax-container" id="about_pa">
 		<div  class="parallax">
-          <img src="{% static 'img/what_3.jpg' %}">    
+          <img src="{{banner_about.image.url}}">    
         </div>
 	</div>
 
@@ -17,12 +17,12 @@
 		<div class="row" id="mission">
 			<div class="col s6 offset-s3">
 				<div class="row">
-					<h4>{{vision.header}}</h4>
+					<h4 class="grey-text light">{{vision.header}}</h4>
 					<p>{{vision.content}}</p>
 				</div>
 
 				<div class="row">
-					<h4>{{mission.header}}</h4>
+					<h4 class="grey-text light">{{mission.header}}</h4>
 					<p>{{mission.content}}</p>
 				</div>
 
