--- a/giref/templates/giref/contact-us.html
+++ b/giref/templates/giref/contact-us.html
@@ -10,7 +10,7 @@
 <div>
 	<div class="parallax-container" id="about_pa">
 		<div  class="parallax">
-	      <img src="{% static 'img/what_3.jpg' %}">    
+	      <img src="{{banner_contact.image.url}}">    
 	    </div>
 	</div>
 	<div class="container"  id="form">
@@ -19,7 +19,7 @@
 		
 		<div class="col s12 m8 l9">
 			<div>
-				<h6 id="contact-header">Do you need more information about GiREF and our upcoming programmes?</h6>
+				<h6 id="contact-header" class="grey-text light">Do you need more information about GiREF and our upcoming programmes?</h6>
 
 				<div class="container" id="form-container">
 					<div class="row">
@@ -54,7 +54,7 @@
 							<div class="row">
 								<div class="input-field col s6">
 									<!-- <textarea id="textarea1" class="materialize-textarea"></textarea> -->
-	      							 <label for="textarea1">Textarea</label> 
+	      							 <label for="textarea1">Pour out your mind</label> 
 	      							
 	      							{{form.message|add_class:"materialize-textarea"}}
 								</div>
