--- a/giref/templates/giref/join-us.html
+++ b/giref/templates/giref/join-us.html
@@ -5,7 +5,7 @@
 <div>
 	<div class="parallax-container" id="about_pa">
 		<div  class="parallax">
-	      <img src="{% static 'img/pitt.jpg' %}">    
+	      <img src="{{banner_joinus.image.url}}">    
 	    </div>
 	</div>
 
@@ -14,7 +14,7 @@
 		<div class="row">
 			<div class="col l8 offset-l3">
 				<div>
-					<p>
+					<p class="grey-text light">
 						We will like to empower teenagers in your community.<br/>
 						The only way we can get to your community is through you. 
 					
