--- a/giref/templates/giref/base.html
+++ b/giref/templates/giref/base.html
@@ -77,7 +77,7 @@
 
 
       <!--Import jQuery before materialize.js-->
-      <script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
+      <script   src="{% static 'js/jquery-2.2.4.js' %}"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
       <script type="text/javascript" src='{% static "js/materialize.js" %}'></script>
       <script type="text/javascript" src='{% static "js/init.js" %}'></script>
 
