--- a/codefortheyoung/templates/codefortheyoung/base.html
+++ b/codefortheyoung/templates/codefortheyoung/base.html
@@ -3,26 +3,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Codefortheyoung - Creating your own technology</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<!--Import Google Icon Font-->
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href='{% static "css/materialize.css" %}'  media="screen,projection"/>
       <link type="text/css" rel="stylesheet" href='{% static "css/style_c.css" %}'  media="screen,projection"/>
+      
 </head>
 <body class="customize">
 
-	<nav class="white">
-	    <div class="nav-wrapper">
-	      <a href="#" class="customize-text"><div class="logo-text">Codefortheyoung</div></a>
-	      <!-- <ul id="nav-mobile" class="right hide-on-med-and-down">
-	        <li><a href="sass.html">Sass</a></li>
-	        <li><a href="badges.html">Components</a></li>
-	        <li><a href="collapsible.html">JavaScript</a></li>
-	      </ul> -->
-	    </div>
-  	</nav>
-
+<div class="navbar-fixed">
+	 <nav class="white" id="nav">
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo" style="color:#2B0000"><img src="{% static 'img/logo.png' %}" style="height:60px; margin-left:-10px"></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="#abt-body" style="color:#2B0000">ABOUT</a></li>
+        <li><a href="#teens-project" style="color:#2B0000">PROJECTS</a></li>
+        <li><a class="waves-effect customize btn-large call-to-action" href="#join-us-sec">JOIN US</a></li>
+      </ul>
+    </div>
+  </nav>
+ </div>       
   	<div>
   	{% block content %}
   	
@@ -52,12 +55,12 @@
           </div>
           <div class="footer-copyright">
             <div class="container">
-            © Copyright 2016 GiREF
+            © Copyright 2016 Codefortheyoung
             <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
             </div>
           </div>
   </footer>
-	 <script type="text/javascript" src='{% static "js/jquery.js" %}'></script>
+	 <script   src="{% static 'js/jquery-2.2.4.js' %}"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
      <script type="text/javascript" src='{% static "js/materialize.js" %}'></script>
      <script type="text/javascript" src='{% static "js/init.js" %}'></script>
 
